# FRAUDRE

./: .dockerignore  .gitignore  .pylintrc  Dockerfile.Python  MANIFEST.in  README.md  build.sh  format.sh  fraudre_demo.ipynb  lint.sh  pyproject.toml  requirements_dev.txt
data/: ctp_pyg_data.pt  results.csv
kf_pipeline/: amm-395-pipeline.json  config.py  custom_job.py  pfr_vertexai_pipeline_singlecomp.py  scoring_pipeline_template.ipynb  upload_package_to_gcs.py
kf_pipeline/gcp_utils/: __init__.py  gcs_utils.py  secret_manager_utils.py
model_package/: MANIFEST.in  run_setup.sh
model_package/model_scoring/: pipeline_test.ipynb  predict.py  predict_pipeline.py  pyproject.toml  requirements.txt
model_package/model_scoring/cert/: iag_ca_cert_chain.pem
model_package/model_scoring/data/: ctp_communities_scored.pkl  doctor_lawyer_data.csv  doctor_psych_data.csv  doctor_repairer_data.csv  graph_data.pt  networkx_graph.pkl  processed_edges.pkl  vehicle_data.csv
model_package/model_scoring/queries/: ctp_doctor_lawyer_pair.sql  ctp_doctor_psych_pair.sql  ctp_doctor_repairer_pair.sql  ctp_node_exp.sql  ctp_vehicle_connection.sql
model_package/model_scoring/test_outputs/: Transformed_Data_1.csv  Transformed_Data_1.xlsx  Transformed_Data_Features.csv  model_features.csv  model_features_1.csv  test_features_lgbm.csv
model_package/model_scoring/trained_models/: communities_init.pkl  doctor_name_map_clustered.json  lawyer_name_map_clustered.json
model_package/model_scoring/utils/community_detection/: graph_construction.py  model_scoring.py
model_package/model_scoring/utils/data_extraction/: data_extraction.py
model_package/model_scoring/utils/data_output/: edh_writing.py
model_package/model_scoring/utils/data_postgres/: data_postgres.py  data_storage.py
model_package/model_scoring/utils/data_transformation/: data_transformation.py
model_package/model_scoring/utils/data_validation/: data_validation.py  pfr_expectation_suite.json
model_package/model_scoring/utils/model_config/: input_config.py
model_package/model_scoring/utils/model_logging/: model_logging.py
model_package/model_scoring/utils/shared_repo/: gen_utils.py
models/: best_params.pkl  dominant_AD_model_2025-09-04-20-40.pth  dominant_AD_model_2025-09-26-23-23.pth  metrics_train.csv
notebooks/: address_testing.ipynb  ctp_community_output.csv  ctp_exposure_syndicate_detect.ipynb  ctp_exposure_syndicate_detect_exp.ipynb  doc_freq.csv  graph_test copy.ipynb  lawyer_freq.csv  psych_freq.csv  repair_freq.csv
notebooks/backup/: ctp_exposure_syndicate_detect_exp.ipynb  ctp_syndicate_detect.ipynb  ctp_syndicate_detect_detail.ipynb  ctp_syndicate_detect_geo.ipynb  ctp_syndicate_detect_weight.ipynb
src/: conf.py  network.py  proxy.conf  pyproject.toml  train.py
src/cert/: iag_ca_cert_chain.pem
src/conf/: conf_dev.yml
src/data/: pyproject.toml  requirements.txt  run_data_model.py
src/data/ctp_dbt_model/: dbt_project.yml
src/data/ctp_dbt_model/macros/: grant_access.sql
src/data/ctp_dbt_model/models/: schema.yml
src/data/ctp_dbt_model/models/backup/: ctp_contact_data_v1.sql
src/data/ctp_dbt_model/models/node_models/: ctp_additional_features_dbt.sql  ctp_claim_features_dbt.sql  ctp_claim_payments_data_dbt.sql  ctp_customer_data_dbt.sql  ctp_injury_data_dbt.sql  ctp_node_exposure_features_dbt.sql  ctp_node_features_dbt.sql  ctp_policy_derived_features_dbt.sql  ctp_policy_payments_data_dbt.sql  ctp_third_party_data_dbt.sql
src/data/ctp_dbt_model/models/node_models/fundamental/: ctp_claims_data_dbt.sql  ctp_indicators_v5_dbt.sql  ctp_policy_huon_dbt.sql  ctp_policy_transaction_payment_dbt.sql
src/data/ctp_dbt_model/models/relationship_models_claim/: ctp_contact_data_dbt1.sql  ctp_cust_connection_dbt1.sql  ctp_doctor_lawyer_pair_dbt1.sql  ctp_doctor_psych_pair_dbt1.sql  ctp_doctor_repairer_pair_dbt1.sql  ctp_vehicle_connection_dbt1.sql
src/data/ctp_dbt_model/models/relationship_models_exposure/: ctp_contact_data_dbt.sql  ctp_doctor_lawyer_pair_dbt.sql  ctp_doctor_psych_pair_dbt.sql  ctp_doctor_repairer_pair_dbt.sql  ctp_vehicle_connection_dbt.sql
src/data/ctp_dbt_model/tests/: testing_script_manual.sql
src/eda/: preprocess_eda.py
src/models/: diag_tmp.py  diagnostics_report.ipynb  diagnostics_report.qmd  diagnostics_report_run.html  diagnostics_report_run.qmd  model_graph_ad.py
src/models/diagnostics_report_run_files/libs/bootstrap/: bootstrap.min.css
src/utils/: feature_processing.py  graph_utils.py  sql.py  utils.py
src/utils/diag_utils/: __init__.py  avse.py  avse_pred.py  calculate_gains.py  partial_dependence_plot.py  prec_rec_thresh.py  target_capture_curve.py  utility_functions.py
src/utils/model_utils/: hash_train_test_split.py  train_eval.py
