[tool.poetry]
name = "dbt_package"
version = "0.1.0"
description = ""
authors = ["Derek Ding <derek.ding@iag.com.au>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
#dbt-postgres = "0.21.1"
#markupsafe = "2.0.1"
dbt-postgres = "1.7.2"
MarkupSafe = "2.1.3"
pytz = "2023.3"
protobuf = "4.25.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.22.0"


[[tool.poetry.source]]
name = "nexus"
url = "https://nexus3.auiag.corp/repos/repository/ddo-pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
